--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
 
   <div id="mydiv2">
     <div id="mydivheader2" style="color:rgb(255, 255, 255);">You should go :</div>
-    <p style="color:rgb(255, 255, 255);"><i class="fa fa-grav"></i>&nbsp; Current Position: &nbsp; &nbsp;&nbsp; <i
-        class="fa fa-space-shuttle"></i>&nbsp;ISS Position: </p>
+    <p style="color:rgb(255, 255, 255);"><i class="fa fa-grav"></i>&nbsp; Current Position: &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <i
+        class="fa fa-space-shuttle"></i>&nbsp;&nbsp;ISS Position: </p>
   </div>
 
   <div id="mydiv3">
