--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     #mydiv2 {
       position: absolute;
       margin-top: 600px;
-      margin-left: 650px;
+      margin-left: 550px;
       padding: 10px;
       z-index: 9;
       background-color: #f1f1f1;
@@ -154,8 +154,8 @@
 
   <div id="mydiv2">
     <div id="mydivheader2" style="color:rgb(255, 255, 255);">You should go :</div>
-    <p style="color:rgb(255, 255, 255);"><i class="fa fa-grav"></i>&nbsp; Current Position: &nbsp;&nbsp;&nbsp; &nbsp;&nbsp; <i
-        class="fa fa-space-shuttle"></i>&nbsp;&nbsp;ISS Position: </p>
+    <p style="color:rgb(255, 255, 255);"><i class="fa fa-grav"></i>&nbsp; Current Position- Altitude: 425km&nbsp;&nbsp;&nbsp; <i
+        class="fa fa-space-shuttle"></i>&nbsp;ISS Position- Altitude: 432km</p>
   </div>
 
   <div id="mydiv3">
