--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   </div>
 
   <div id="mydiv2">
-    <div id="mydivheader2" style="color:rgb(255, 255, 255);">You should go :</div>
+    <div id="mydivheader2" style="color:rgb(255, 255, 255);">You should go : ↑ (Straight)</div>
     <p style="color:rgb(255, 255, 255);"><i class="fa fa-grav"></i>&nbsp; Current Position- Altitude: 425km&nbsp;&nbsp;&nbsp; <i
         class="fa fa-space-shuttle"></i>&nbsp;ISS Position- Altitude: 432km</p>
   </div>
